Fixed sync. Scorbot VPlus

--- a/Docs/latex/annotated.tex
+++ b/Docs/latex/annotated.tex
@@ -12,6 +12,7 @@ Lista de las clases, estructuras, uniones e interfaces con una breve descripció
 \item\contentsline{section}{\mbox{\hyperlink{class_command_terminal_1_1_command_history}{Command\+Terminal.\+Command\+History}} }{\pageref{class_command_terminal_1_1_command_history}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_command_terminal_1_1_command_log}{Command\+Terminal.\+Command\+Log}} }{\pageref{class_command_terminal_1_1_command_log}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_controller}{Controller}} }{\pageref{class_controller}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_effector_file_control}{Effector\+File\+Control}} }{\pageref{class_effector_file_control}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_game_controller}{Game\+Controller}} }{\pageref{class_game_controller}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_grip_scorbot_e_r_i_x}{Grip\+Scorbot\+E\+R\+IX}} }{\pageref{class_grip_scorbot_e_r_i_x}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_grip_scorbot_e_r_v_plus}{Grip\+Scorbot\+E\+R\+V\+Plus}} }{\pageref{class_grip_scorbot_e_r_v_plus}}{}
