--- a/Docs/latex/class_state_message_control.tex
+++ b/Docs/latex/class_state_message_control.tex
@@ -20,8 +20,8 @@ void \mbox{\hyperlink{class_state_message_control_a534610a9734b552696484aaeeb83c
 \subsection*{Métodos privados}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_state_message_control_adf8e104a97efb32e6d4fc5ada6cdd57d}\label{class_state_message_control_adf8e104a97efb32e6d4fc5ada6cdd57d}} 
-void {\bfseries Start} ()
+\mbox{\Hypertarget{class_state_message_control_a353bea223ecc1cb5588264e024fd6893}\label{class_state_message_control_a353bea223ecc1cb5588264e024fd6893}} 
+void {\bfseries Awake} ()
 \item 
 void \mbox{\hyperlink{class_state_message_control_a09f2f0b683668a6b87f01078626c1ee0}{Update\+Count\+Data}} (int n\+Sync, int n\+Total)
 \item 
