--- a/Docs/latex/hierarchy.tex
+++ b/Docs/latex/hierarchy.tex
@@ -22,6 +22,7 @@ Esta lista de herencias esta ordenada aproximadamente por orden alfabético\+:\b
 \item \contentsline{section}{Command\+Control}{\pageref{class_command_control}}{}
 \item \contentsline{section}{Command\+Terminal.\+Terminal}{\pageref{class_command_terminal_1_1_terminal}}{}
 \item \contentsline{section}{Controller}{\pageref{class_controller}}{}
+\item \contentsline{section}{Effector\+File\+Control}{\pageref{class_effector_file_control}}{}
 \item \contentsline{section}{Game\+Controller}{\pageref{class_game_controller}}{}
 \item \contentsline{section}{Grip\+Scorbot\+E\+R\+IX}{\pageref{class_grip_scorbot_e_r_i_x}}{}
 \item \contentsline{section}{Grip\+Scorbot\+E\+R\+V\+Plus}{\pageref{class_grip_scorbot_e_r_v_plus}}{}
