--- a/Docs/latex/refman.tex
+++ b/Docs/latex/refman.tex
@@ -182,6 +182,7 @@
 \input{class_command_terminal_1_1_command_history}
 \input{class_command_terminal_1_1_command_log}
 \input{class_controller}
+\input{class_effector_file_control}
 \input{class_game_controller}
 \input{class_grip_scorbot_e_r_i_x}
 \input{class_grip_scorbot_e_r_v_plus}
